--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spritejsTest",
+  "name": "gulp-demo",
   "description": "",
   "main": "gulpfile.js",
   "author": "",
@@ -23,6 +23,7 @@
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-less": "^3.5.0",
+    "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.3.0",
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^5.0.0",
